apps/nats-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nats-monitor-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nats.acdgbrasil.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nats
            port:
              number: 8222
