apps/tcc-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcc-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcc-site
  template:
    metadata:
      labels:
        app: tcc-site
    spec:
      containers:
      - name: tcc-site
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: tcc-html
---
apiVersion: v1
kind: Service
metadata:
  name: tcc-site
spec:
  selector:
    app: tcc-site
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcc-site-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: tcc.acdgbrasil.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tcc-site
            port:
              number: 80
